bugfix for intro section in landing page by left: remove blockquote element, align title with paragraph text

--- a/modules/social_features/social_landing_page/css/social_landing_page.section.introduction.scss
+++ b/modules/social_features/social_landing_page/css/social_landing_page.section.introduction.scss
@@ -14,9 +14,9 @@
       font-size: 1.5rem;
       color: #4d4d4d;
       font-weight: bold;
-      padding: 15px 27px;
+      padding: 15px 0;
       @media(min-width: 600px) {
-        padding: 15px 60px;
+        padding: 15px 0;
       }
     }
     blockquote {
@@ -24,11 +24,6 @@
       @media(min-width: 600px) {
         padding: 0 55px;
         border-left-width: 5px;
-      }
-      // in case of nested blockquote
-      blockquote {
-        padding: 0;
-        border: 0 none;
       }
     }
   }
